# Automata-Simulator

./: .gitignore  README.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx
frontend/src/components/: SimCanvas.tsx
sim-core/: Cargo.toml
sim-core/src/: automata.rs  lib.rs
